[gd_scene load_steps=6 format=3 uid="uid://b5er8kmv0j7aw"]

[ext_resource type="Script" uid="uid://d3xvmgahs7dfp" path="res://scenes/components/common/InventorySlot.gd" id="1_ky5f6"]
[ext_resource type="StyleBox" uid="uid://3l474d1p81yu" path="res://resources/themes/BackgroundTheme001.tres" id="2_lv4j1"]
[ext_resource type="Texture2D" uid="uid://bgjn0i0ucf4f6" path="res://assets/items/items_sheet_1.png" id="3_qrqnd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0vuqa"]
atlas = ExtResource("3_qrqnd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vr8h"]
content_margin_left = 2.0
content_margin_right = 2.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ky5f6")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = ExtResource("2_lv4j1")

[node name="Highlight" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="IconButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="IconButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_0vuqa")

[node name="Quantity" type="Label" parent="IconButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_0vr8h")
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="IconButton" to="." method="_on_icon_button_pressed"]
